<resources>
    <string name="app_name">Con Cho Back</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Setting</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="language">Language</string>

    <string name="title_1">Design Your Unique Emojis</string>
    <string name="title_2">Design Unique Stickers</string>
    <string name="title_3">Crafted by You, Loved by All</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">I need your love</string>

    <string name="one_star_title">Little buddy made me cry</string>
    <string name="one_star">I will cry all day</string>

    <string name="two_star_title">I’m a little sad</string>
    <string name="two_star">I will not eat rice today</string>

    <string name="three_star_title">Great job little buddy</string>
    <string name="three_star">I know you won\'t let me be sad</string>

    <string name="four_star_title">You are so handsome</string>
    <string name="four_star">The prince is so handsome</string>

    <string name="five_star_title">I love you so much</string>
    <string name="five_star">let\'s get married</string>

    <string name="rate_us_0">You have not rated it yet!</string>

    <string name="rate">Rate</string>
    <string name="exit">Exit</string>

    <string name="have_rated">Thank you for rate our app</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="done">Done</string>

    <string name="downloading">Downloading...</string>

    <string name="your_costume_isn_t_finished_yet_you_still_want_to_exit">Your costume isn\'t finished yet, you still want to exit?</string>
    <string name="next">Next</string>

    <string name="please_check_your_network_connection">Please check your network connection.</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>

    <string name="create_emoji">Create Emoji</string>
    <string name="emoji_maker">Emoji Maker</string>
    <string name="cosplay_emoji">Cosplay Emoji</string>
    <string name="my_creation">My Creation</string>
    <string name="save">Save</string>
    <string name="choose_color">Choose Color</string>
    <string name="cosplay_mode">Cosplay Mode,</string>
    <string name="players_are_randomly_given">Players Pre Randomly Given</string>
    <string name="one_reference_image">One Reference Image</string>
    <string name="to_follow_your_task_is_to_recreate_that_character_as_accurately_as_possible_by_choosing_the_right_every_correct_match_increases_your">To Follow. Your Task Is To Recreate That Character As Accurately As Possible By Choosing The Right. Every Correct Match Increases Your</string>
    <string name="percentage_score">Percentage Score (%)</string>
    <string name="the_closer_your_character_looks_to_the_random_image_the_higher_your_final_score_will_be_pay_attention_to_small_details_to_achieve_the_best_cosplay_result">The Closer Your Character Looks To The Random Image, The Higher Your Final Score Will Be. Pay Attention To Small Details To Achieve The Best Cosplay Result.</string>
    <string name="processing_please_wait">Processing, Please Wait...</string>
    <string name="category">Category</string>
    <string name="oops">Oops!</string>
    <string name="ok">Ok</string>
    <string name="an_error_occurred">An error occurred, please try again later.</string>
    <string name="have_not_saved_it_yet_do_you_want_to_exit">Have Not Saved It Yet, Do You Want To Exit?</string>
    <string name="reset">Reset</string>
    <string name="do_you_want_to_reset_all">Do You Want To Reset All?</string>
    <string name="add_image">Add Image</string>
    <string name="color">Color</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="type_your_content">Type You Content</string>
    <string name="font">Font</string>
    <string name="null_edt">Please enter text</string>
    <string name="download_successful">Download successful!</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete_this_item">Are You Sure Want To Delete This Item?</string>
    <string name="my_emoji">My Emoji</string>
    <string name="my_design">My Design</string>
    <string name="add_to_whatsapp">Add To Whatsapp</string>
    <string name="add_to_telegram">Add To Telegram</string>
    <string name="no_item_here">No Item Here</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="please_select_an_item">Please select an item</string>
    <string name="download_success"><![CDATA[Successfully downloaded to the Emoji & Sticker Maker folder.]]></string>
    <string name="at_least_3_photos_are_needed">At least 3 photos are needed.</string>
    <string name="maximum_30_images">Maximum 30 images</string>
    <string name="create_package_name">Create package name</string>
    <string name="enter_your_package_name">Enter you package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="size">Size</string>
</resources>