<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_creation.MyCreationActivity">

    <include layout="@layout/layout_background" />

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--    native_ads-->
    <!--    <FrameLayout-->
    <!--        android:id="@+id/native_ads"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/layoutActionBar">-->

    <!--        <include layout="@layout/ads_native_banner_shimmer" />-->
    <!--    </FrameLayout>-->

    <!--    lnlType-->
    <LinearLayout
        android:id="@+id/lnlType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar">

        <!--                btnEditCreation-->
        <FrameLayout
            android:id="@+id/btnEditCreation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_100_button_focus_app_medium">

            <!--                    tvEditCreation-->
            <com.meskiep.vaithat.core.custom.text.StrokeTextView
                android:id="@+id/tvEditCreation"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:paddingVertical="2dp"
                android:text="@string/my_emoji"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:strokeColor="@color/green_003B50"
                app:strokeJoinStyle="round"
                app:strokeMiter="5dp"
                app:strokeWidth="2dp" />
        </FrameLayout>

        <!--                btnViewCreation-->
        <FrameLayout
            android:id="@+id/btnViewCreation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_100_button_unfocus_app_medium">

            <!--                tvViewCreation-->
            <com.meskiep.vaithat.core.custom.text.StrokeTextView
                android:id="@+id/tvViewCreation"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cookies"
                android:gravity="center"
                android:paddingVertical="2dp"
                android:text="@string/my_design"
                android:textColor="@color/green_003B50"
                android:textSize="20sp"
                app:strokeColor="@color/transparent"
                app:strokeJoinStyle="round"
                app:strokeMiter="5dp"
                app:strokeWidth="2dp" />
        </FrameLayout>
    </LinearLayout>

    <!--    rcvEditCreation-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvEditCreation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="6dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/lnlBottom"
        app:layout_constraintTop_toBottomOf="@+id/lnlType"
        app:spanCount="2"
        tools:listitem="@layout/item_my_creation" />

    <!--    rcvViewCreation-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvViewCreation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="8dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/lnlBottom"
        app:layout_constraintTop_toBottomOf="@+id/lnlType"
        app:spanCount="2"
        tools:listitem="@layout/item_my_creation" />

    <!--    imvBlur-->
    <ImageView
        android:id="@+id/imvBlur"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-26dp"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/bg_gradient_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lnlBottom"
        app:layout_constraintStart_toStartOf="@+id/lnlBottom"
        app:layout_constraintTop_toTopOf="@+id/lnlBottom" />

    <!--    lnlBottom-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"

        android:paddingHorizontal="13dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--        lnlBottomTop-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnlBottomTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--            btnWhatsapp-->
            <FrameLayout
                android:id="@+id/btnWhatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_10_stroke_white_solid_green"
                android:padding="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="2dp"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_whatsapp" />

                    <!--                        tvWhatsapp-->
                    <TextView
                        android:id="@+id/tvWhatsapp"
                        style="@style/single_marquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:fontFamily="@font/cookies"
                        android:text="@string/add_to_whatsapp"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </FrameLayout>

            <!--            btnTelegram-->
            <FrameLayout
                android:id="@+id/btnTelegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/bg_10_stroke_white_solid_blue"
                android:padding="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="2dp"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_telegram" />

                    <!--                        tvTelegram-->
                    <TextView
                        android:id="@+id/tvTelegram"
                        style="@style/single_marquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:fontFamily="@font/cookies"
                        android:text="@string/add_to_telegram"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- lnlDownShare-->
        <FrameLayout
            android:id="@+id/lnlDownShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <include
                android:id="@+id/bottomBar"
                layout="@layout/layout_double_button" />
        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- No Item-->
    <FrameLayout
        android:id="@+id/layoutNoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlType">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookies"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no_item_here"
            android:textColor="@color/green_003B50"
            android:textSize="16sp" />
    </FrameLayout>

    <!--    flNativeCollab-->
    <!--    <FrameLayout-->
    <!--        android:id="@+id/flNativeCollab"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>