<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permission.PermissionActivity">

    <include layout="@layout/layout_background" />

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="72dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_permission"
        app:layout_constraintBottom_toTopOf="@+id/flText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar" />

    <!--    flText-->
    <FrameLayout
        android:id="@+id/flText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutPermission">

        <!--        tvPermission-->
        <com.meskiep.vaithat.core.custom.text.StrokeTextViewSpan
            android:id="@+id/tvPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cookies"
            android:gravity="center"
            android:textSize="16sp" />
    </FrameLayout>

    <!--    layoutPermission-->
    <LinearLayout
        android:id="@+id/layoutPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--        layoutStorage-->
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutStorage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_100_button_focus_app_long">

                <com.meskiep.vaithat.core.custom.text.StrokeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/cookies"
                    android:gravity="start"
                    android:text="@string/storage"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:strokeColor="@color/green_003B50"
                    app:strokeJoinStyle="round"
                    app:strokeMiter="5dp"
                    app:strokeWidth="1dp" />

                <!--            swStorage-->
                <ImageView
                    android:id="@+id/swStorage"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!--        layoutNotification-->
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutNotification"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_100_button_focus_app_long">

                <com.meskiep.vaithat.core.custom.text.StrokeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/cookies"
                    android:gravity="start"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:strokeColor="@color/green_003B50"
                    app:strokeJoinStyle="round"
                    app:strokeMiter="5dp"
                    app:strokeWidth="1dp" />

                <!--            swNotification-->
                <ImageView
                    android:id="@+id/swNotification"
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--    btnContinue-->
    <TextView
        android:id="@+id/btnContinue"
        style="@style/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/continue_per"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    native_ads-->
    <!--    <FrameLayout-->
    <!--        android:id="@+id/native_ads"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent">-->

    <!--        <include layout="@layout/ads_native_big_btn_top_shimmer" />-->
    <!--    </FrameLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>